ChangeLog

*********** release of 0.10.1

20040906
	-src/libnova/solar.h
	
	Removed private function from header

	Liam Girdwood

20040906
	- src/julian_day.c
	
	Fixed micro second overflow bug in ln_get_date_from_sys

	Liam Girdwood


************* release of 0.10.0

20042905
	- Added logo
	
	Edward Rands, Liam Girdwood


20042805
	-src/hyperbolic.c, src/libnova/hyperbolic.h, src/libnova/solar.h

	Fixed doxygen typos
	
	Liam Girdwood
	
20042005
	-src/hyperbolic.c, src/libnova/hyperbolic.h
	
	Added hyperbolic motion of bodies
	
	Petr Kubanek

20040205
	-src/utility.c
	
	Added overflow detection in *_to_hms(), *_to_dms()

20040105
	-src/transform.c
	-examples/transforms.c
	
	Fixed quadrant range bug and added transform example

20041904
	-src/utility.c
	
	Simplify some basic conversions.
	
	Juan Carlos Remis 

20041704
	-examples/sun.c
	
	Fixed typo in example code
	
	Liam Girdwood

20041804
	-src/elliptic_motion.c
	-src/parabolic_motion.c
	
	Change RST to use IAU longitudes.
	
	Liam Girdwood

20041704
	-src/rise_set.c
	
	Change RST to use IAU longitudes.
	
	Liam Girdwood

20041004
	-src/rise_set.c

	Fixed bug with correct side of
	angles passed to ln_interpolate3
	in ln_get_body_rst_horizont

	Petr Kubanek

20041003
	-src/aberration.c
	-src/nutation.c
	-src/transform.c
	-src/precession.c
	-src/utility.c
	-lntest/test.c
	
	Used long doubles internally.
	Fixed bug in ln_dms negative bit.
	
	Liam Girdwood

20040703
	-src/*.c
	-src/libnova/*.h
	-lntest/*.c
	-examples/*.c
	
	Created new API with ln_ prefix.
	All headers are now in src/libnova/ and are installed in 
	$(prefix)/libnova/
	
	Liam Girdwood, Peter Williams

20042001
	-src/transform.c
	-src/libnova.h
	-lntest/test.c
	
	Changed from longitude measurement from Meeus positively westwards to the
	IAU's positively eastwards.

	Liam Girdwood, Guillermo Ballester Valor


20033008

	-src/julian_day.c
	
	Added Win32 timezone functionality
	
	Liam Girdwood, Pablo Martikian

	-src/libnova.h
	-src/rise_set.c