@@ -3912,7 +3912,7 @@ double ln_get_jupiter_earth_dist (double JD)
 *
 * Calculates the distance in AU between the Sun and Jupiter for the given julian day.
 */ 
-double ln_get_jupiter_sun_dist (double JD)
+double ln_get_jupiter_solar_dist (double JD)
 {
 	struct ln_helio_posn h_jupiter;
 	
@@ -3933,7 +3933,7 @@ double ln_get_jupiter_magnitude (double JD)
 	double delta, r, i;
 	
 	/* get distances */
-	r = ln_get_jupiter_sun_dist (JD);
+	r = ln_get_jupiter_solar_dist (JD);
 	delta = ln_get_jupiter_earth_dist (JD);
 	
 	/* get phase */
@@ -3956,8 +3956,8 @@ double ln_get_jupiter_disk (double JD)
 	double r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_jupiter_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_jupiter_solar_dist (JD);
 	delta = ln_get_jupiter_earth_dist (JD);
 	
 	/* calc fraction angle */
@@ -3977,8 +3977,8 @@ double ln_get_jupiter_phase (double JD)
 	double i,r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_jupiter_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_jupiter_solar_dist (JD);
 	delta = ln_get_jupiter_earth_dist (JD);
 
 	/* calc phase */
