@@ -74,7 +74,7 @@ double ln_get_venus_earth_dist (double JD);
 * \return Distance in AU
 */ 
 /* Chapter ?? */
-double ln_get_venus_sun_dist (double JD);
+double ln_get_venus_solar_dist (double JD);
 	
 /*! \fn double ln_get_venus_magnitude (double JD);
 * \brief Calculate the visible magnitude of Venus
