@@ -7428,7 +7428,7 @@ double ln_get_mercury_earth_dist (double JD)
 * Calculates the distance in AU between the Sun and Mercury for
 * the given julian day.
 */ 
-double ln_get_mercury_sun_dist (double JD)
+double ln_get_mercury_solar_dist (double JD)
 {
 	struct ln_helio_posn  h_mercury;
 
@@ -7451,7 +7451,7 @@ double ln_get_mercury_magnitude (double JD)
 	double delta, r, i, i2, i3;
 	
 	/* get distances */
-	r = ln_get_mercury_sun_dist (JD);
+	r = ln_get_mercury_solar_dist (JD);
 	delta = ln_get_mercury_earth_dist (JD);
 	
 	/* get phase */
@@ -7476,8 +7476,8 @@ double ln_get_mercury_disk (double JD)
 	double r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_mercury_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_mercury_solar_dist (JD);
 	delta = ln_get_mercury_earth_dist (JD);
 	
 	/* calc fraction angle */
@@ -7498,8 +7498,8 @@ double ln_get_mercury_phase (double JD)
 	double i,r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_mercury_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_mercury_solar_dist (JD);
 	delta = ln_get_mercury_earth_dist (JD);
 
 	/* calc phase */
