@@ -2287,7 +2287,7 @@ double ln_get_neptune_earth_dist (double JD)
 * Calculates the distance in AU between the Sun and Neptune
 * for the given julian day.
 */ 
-double ln_get_neptune_sun_dist (double JD)
+double ln_get_neptune_solar_dist (double JD)
 {
 	struct ln_helio_posn  h_neptune;
 
@@ -2308,7 +2308,7 @@ double ln_get_neptune_magnitude (double JD)
 	double delta, r;
 	
 	/* get distances */
-	r = ln_get_neptune_sun_dist (JD);
+	r = ln_get_neptune_solar_dist (JD);
 	delta = ln_get_neptune_earth_dist (JD);
 
 	return -6.87 + 5 * log10 (r * delta);
@@ -2328,8 +2328,8 @@ double ln_get_neptune_disk (double JD)
 	double r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_neptune_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_neptune_solar_dist (JD);
 	delta = ln_get_neptune_earth_dist (JD);
 	
 	/* calc fraction angle */
@@ -2349,8 +2349,8 @@ double ln_get_neptune_phase (double JD)
 	double i,r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_neptune_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_neptune_solar_dist (JD);
 	delta = ln_get_neptune_earth_dist (JD);
 
 	/* calc phase */
