@@ -6654,7 +6654,7 @@ double ln_get_saturn_earth_dist (double JD)
 * Calculates the distance in AU between the Sun and Saturn for
 * the given julian day.
 */ 
-double ln_get_saturn_sun_dist (double JD)
+double ln_get_saturn_solar_dist (double JD)
 {
 	struct ln_helio_posn h_saturn;
 
@@ -6677,7 +6677,7 @@ double ln_get_saturn_magnitude (double JD)
 	double delta, r;
 	
 	/* get distances */
-	r = ln_get_saturn_sun_dist (JD);
+	r = ln_get_saturn_solar_dist (JD);
 	delta = ln_get_saturn_earth_dist (JD);
 
 	return -8.88 + 5 * log10 (r * delta); /* + 0.044 * U - 2.6 * sin (B) + 1.25 * (sin (B) * sin (B)); */
@@ -6697,8 +6697,8 @@ double ln_get_saturn_disk (double JD)
 	double r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_saturn_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_saturn_solar_dist (JD);
 	delta = ln_get_saturn_earth_dist (JD);
 	
 	/* calc fraction angle */
@@ -6718,8 +6718,8 @@ double ln_get_saturn_phase (double JD)
 	double i,r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_saturn_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_saturn_solar_dist (JD);
 	delta = ln_get_saturn_earth_dist (JD);
 
 	/* calc phase */
