@@ -1999,7 +1999,7 @@ double ln_get_venus_earth_dist (double JD)
 * Calculates the distance in AU between the Sun and Venus for
 * the given julian day.
 */ 
-double ln_get_venus_sun_dist (double JD)
+double ln_get_venus_solar_dist (double JD)
 {
 	struct ln_helio_posn  h_venus;
 
@@ -2022,7 +2022,7 @@ double ln_get_venus_magnitude (double JD)
 	double delta, r, i, i2, i3;
 	
 	/* get distances */
-	r = ln_get_venus_sun_dist (JD);
+	r = ln_get_venus_solar_dist (JD);
 	delta = ln_get_venus_earth_dist (JD);
 	
 	/* get phase */
@@ -2047,8 +2047,8 @@ double ln_get_venus_disk (double JD)
 	double r,delta,R;	
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_venus_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_venus_solar_dist (JD);
 	delta = ln_get_venus_earth_dist (JD);
 	
 	/* calc fraction angle */
@@ -2069,8 +2069,8 @@ double ln_get_venus_phase (double JD)
 	double i,r,delta,R;
 	
 	/* get distances */
-	R = ln_get_earth_sun_dist (JD);
-	r = ln_get_venus_sun_dist (JD);
+	R = ln_get_earth_solar_dist (JD);
+	r = ln_get_venus_solar_dist (JD);
 	delta = ln_get_venus_earth_dist (JD);
 
 	/* calc phase */
